# Classification-Confidence-Intervals

./: .coveragerc  .flake8  .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
classificationconfidenceintervals/: __init__.py  check_inputs.py  classification_confidence_intervals.py  confidence_intervals_data_class.py  plot_config.py  read_only_properties_decorator.py  version.py
tests/: conftest.py  test_classification_confidence_intervals.py
