[build-system]
requires = [
    "setuptools >= 41.0.0",
    "wheel >= 0.30.0",
    "setuptools-scm >= 2, < 4"
]
build-backend = 'setuptools.build_meta'

[tool.semantic_release]
version_variable = [
    "classificationconfidenceintervals/version.py:__version__",
]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      \.eggs
    | \.git
    | \.tox
    | \.vscode
    | \build
    | \dist
)
'''